# Crescendo

./: CMakeLists.txt  LICENSE  PKGBUILD  README.md  crescendo.desktop.in  crescendo.service  helper.h  main.cpp  player.cpp  player.h  playerwindow.cpp  playerwindow.h  playlistrow.cpp  playlistrow.h  volumebutton.cpp  volumebutton.h
